# valkey-glide

glide-core/: THIRD_PARTY_LICENSES_RUST
java/: THIRD_PARTY_LICENSES_JAVA
java-callback/: Cargo.toml  benchmark.sh  build.gradle  build.rs  install.sh  settings.gradle
java-callback/benchmarks/: build.gradle
java-callback/benchmarks/src/main/java/glide/benchmarks/: BenchmarkingApp.java
java-callback/benchmarks/src/main/java/glide/benchmarks/clients/callback/: ValkeyAsyncClient.java
java-callback/benchmarks/src/main/java/glide/benchmarks/clients/glide/: GlideAsyncClient.java
java-callback/client/: build.gradle
java-callback/client/src/main/java/: module-info.java
java-callback/client/src/main/java/glide/api/: ValkeyOperator.java
java-callback/client/src/main/java/glide/ffi/callback/: InternalPointerMarker.java  RedisClient.java  RsLogger.java  ThreadCallback.java  ThreadSafeObserver.java  ValkeyClient.java
java-callback/client/src/main/java/glide/supports/: LoadHelper.java
java-callback/client/src/test/java/glide/: LoadHelper.java
java-callback/client/src/test/java/glide/test/ffi/: CallbackTests.java  ConnectHandler.java  ResponseHandler.java
java-callback/src/: async_callback.rs  async_callback.rs.in  lib.rs  redis.rs
node/: THIRD_PARTY_LICENSES_NODE
python/: THIRD_PARTY_LICENSES_PYTHON
