[package]
name = "glide-rs-cb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
redis = { path = "../glide-core/redis-rs/redis", features = ["aio", "tokio-comp", "connection-manager", "tokio-rustls-comp"] }
glide-core = { path = "../glide-core" }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.13"
logger_core = {path = "../logger_core"}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.16"
jni = "0.21.1"
log = "0.4.20"
bytes = { version = "1.6.0" }
once_cell = "1"
crossbeam-channel = "0.5"

[build-dependencies]
log = "*"
flapigen = "0.8.0"
bindgen = { version = "0.71.1", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }

[profile.release]
lto = true
strip = "symbols"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ffi_test)'] }
